package mjroom;

//麻将牌的结构
message MjDesk {
    optional int32 DeskId = 1;
}

//手里的一副牌
message MjUser {
    optional uint32 UserId = 1;

}

//一个麻将room
message MjRoom {
    optional int32 RoomId = 1;
    optional int32 roomType = 2;
}